tests/errors/field_assign_wrong_type.ptt
// Codex audit P0-4: field reassignment must check value type
// against declared field type.

use std/string

Point is { x int, y int }

spark {
  p is Point()
  p.x be "hi"
}
